fix: cut line dark mode

--- a/src/components/Toolbar/Toolbar.scss
+++ b/src/components/Toolbar/Toolbar.scss
@@ -55,7 +55,13 @@ $name: "fastboard-toolbar";
     display: inline-block;
     height: 0.5px;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.15);
+    &.light {
+      background-color: #e7e7e7;
+    }
+
+    &.dark {
+      background-color: rgba(255, 255, 255, 0.15);
+    }
   }
 
   .pencil-wrapper {
